Fix accessiblity issues

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
     <title>QR code component using CSS Grid and Flexbox</title>
   </head>
   <body>
-    <div class="container">
+    <h1></h1>
+    <div class="container" role="main">
       <div class="widget">
         <div class="widget-buffer"></div>
-        <img src="images/image-qr-code.png" class="qr-img" />
+        <img src="images/image-qr-code.png" class="qr-img" alt="" />
         <div class="headline">
           Improve your front-end skills by building projects
         </div>
